# suipump

./: .gitattributes  .gitignore  .gitignore.txt  CLAUDE.md  DEPLOYMENT.md  HANDOFF.md  HANDOFF_SESSION8.md  README.md  REDESIGN_STATUS_2026-07-17.md  SECURITY_AUDIT_2026-07-15.md  SHIP_LOG.md  conflicts_dump.txt  contracts-v7.lnk  fix_tokenpage_import.py  how 38d969e --name-only  package-lock.json  package.json  patch_api.py  patch_leaderboard.py  tool_keypair.json  traders.json  tx.json
.claude/hooks/: gates.py
.githooks/: pre-commit
agent-runner/: README_DEPLOY.md  autopilot.js  build.sh  package.json  server.js  start.sh  strategy.js
api/: analyze.js  rpc.js
coin-template/: Move.toml  template.hex
coin-template/sources/: template.move
contracts/: Move.toml  Published.toml
contracts-test/: Move.toml  Published.toml
contracts-test/sources/: bonding_curve_test.move
contracts-v10/: AUDIT_NOTES.md  EXECUTIVE_SECURITY_REPORT.md  Move.toml  SECURITY_AUDIT_2026-07-18_FULL.md  SECURITY_REAUDIT_2026-07-16.md  SECURITY_REAUDIT_2026-07-17_PREPUBLISH.md
contracts-v10/sources/: agent_session.move  bonding_curve.move  bonding_curve_tests.move  enclave_registry.move
contracts-v5/: Move.toml  Published.toml
contracts-v6/: .gitignore  Move.toml  Published.toml
contracts-v6/sources/: bonding_curve.move
contracts-v7/: Move.toml  Published.toml
contracts-v7/sources/: bonding_curve_tests.move
contracts-v8/: Move.toml  Published.toml
contracts-v8/sources/: bonding_curve.move  bonding_curve_tests.move
contracts-v9/: .gitignore  Move.toml  Published.toml
contracts-v9/sources/: bonding_curve.move  bonding_curve_tests.move
contracts/sources/: bonding_curve.move  bonding_curve_tests.move  token_template.move
enclave/: Cargo.toml  Dockerfile  entrypoint.sh  register_enclave.js
enclave/src/: main.rs
frontend/: App.jsx
frontend-app/: .env.txt  README.md  frontend-app.env.txt  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js
frontend-app/api/: agent-actions.js  agent-bridge.js  agent-claim-all.js  agent-confirm.js  agent-plan.js  agent-run.js  analyze.js  cancel-order.js  create-order.js  create-session-key.js  epoch-recovery.js  epoch-session.js  sweep-session-gas.js  token-og.js
frontend-app/lib/: authCanonical.js  verifyOwner.js
frontend-app/public/: manifest.json  template.mv
frontend-app/src/: AIAnalysis.jsx  AgentPage.jsx  App.jsx  (+48 more)
graduation-test/: accumulate_deep.js  burners.json  config.js  deep_farm.js  deploy_test.js  deposit_deepbook.js  get_deep.js  graduate_deepbook_full.js  graduate_test.js  graduate_turbos_full.js  graduation-test-package.json  launch_test.js  package-lock.json  package.json  recover_burners.js  withdraw_deepbook.js
graduation-test-turbos/: check_balances.js  check_pool.js  config.js  graduate_turbos_full.js  package-lock.json  package.json
indexer/: .env  .env.example  agent_actions.js  agent_session_api.js  api.js  api_server.js  auto_graduate.js  backfill_icons.js  bounty.js  bundles.js  check_nxt7.js  cto_reclaim_sweeper.js  db.js  dedup_events.js  fix_unique_constraint.js  game_progress.js  index.js  orders.js  package-lock.json  package.json  partner_launches.js  points.js  price_publisher.js  render.yaml  reset_cursors.js  reset_v8_cursor.js  takeover_api.js  write_target.js  x_provider.js
move-security-audit/: move-security-auditor.md
scripts/: buy.js  census_fallback_sessions.js  claim_fees.js  config.js  discord-bot.js  dryrun_graduation_load.js  fix_duplicate_v8.py  gen_tool_keys.mjs  graduate.js  inspect.js  launch.js  package-lock.json  package.json  patch_tokenpage_v8.py  precommit_gate.mjs  sim_wallets.json  upgrade.js  volume_sim.js
suipump-nexus-tools/: .gitignore  Cargo.toml  allowed_leaders.json  bridge.js  nexus_toolkit_config.json  nexus_toolkit_config.template.json  package-lock.json  package.json  start.sh  suipump_dag.json  turnkey_signer.js
suipump-nexus-tools/dags/: dag_alerts.json  dag_buy.json  dag_claim.json  dag_launch.json  dag_launch_buy.json  dag_sell.json
suipump-nexus-tools/src/: alerts.rs  buy.rs  claim.rs  launch.rs  main.rs  sell.rs
tests/: test_harness.py  test_harness_v10.py  test_harness_v6.py  test_harness_v7.py  test_harness_v8.py  test_harness_v9.py
(+2 files in other folders)
