[package]
name = "suipump-nexus-tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "suipump-tools"
path = "src/main.rs"

[dependencies]
nexus-toolkit = { git = "https://github.com/Talus-Network/nexus-sdk", tag = "v1.0.0", package = "nexus-toolkit" }
nexus-sdk = { git = "https://github.com/Talus-Network/nexus-sdk", tag = "v1.0.0", package = "nexus-sdk", features = ["signed_http"] }
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
warp = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
log = "0.4"
env_logger = "0.11"

# Must match exactly what nexus-sdk workspace uses: schemars = "1.0.0"
# Use path override to force same instance
[dependencies.schemars]
version = "1.0.0"

[patch.crates-io]
core2 = { git = "https://github.com/bbqsrc/core2", rev = "545e84bcb0f235b12e21351e0c69767958efe2a7" }
