[package]
name = "suipump-nexus-tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "suipump-tools"
path = "src/main.rs"

[dependencies]
schemars = "1.0.0-alpha.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
warp = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
log = "0.4"
env_logger = "0.11"

[dependencies.nexus-sdk]
git = "https://github.com/Talus-Network/nexus-sdk.git"
tag = "v1.0.0"
package = "nexus-sdk"

[dependencies.nexus-toolkit]
git = "https://github.com/Talus-Network/nexus-sdk.git"
tag = "v1.0.0"
package = "nexus-toolkit"
