[package]
name = "suipump-nexus-tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "suipump-tools"
path = "src/main.rs"

[dependencies]
schemars = "1.0.0-alpha.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
warp = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
log = "0.4"
env_logger = "0.11"

[dependencies.nexus-sdk]
git = "https://github.com/Talus-Network/nexus-sdk.git"
tag = "v1.0.0"
package = "nexus-sdk"

[dependencies.nexus-toolkit]
git = "https://github.com/Talus-Network/nexus-sdk.git"
tag = "v1.0.0"
package = "nexus-toolkit"

# Fast-compile release profile. These tools are I/O-bound HTTP forwarders (they
# POST to the bridge over the network), so heavy LLVM optimization buys nothing
# at runtime while costing minutes per build. opt-level=1 keeps codegen light,
# lto=false skips link-time optimization, and a high codegen-units maximizes
# parallelism across cores — cutting compile time with no meaningful runtime hit.
[profile.release]
opt-level = 1
lto = false
codegen-units = 256
debug = false
incremental = true
